weather: update sample to Debian Bullseye
The sample was deprecated because the repository https://github.com/awegrzyn/influxdb-cxx
was unmaintained. This commit replaces it with the maintained fork
https://github.com/offa/influxdb-cxx.

The dependencies are also updated to Debian Bullseye.

The cURL API request timeout is increased, to prevent timeout errors
that will make the demo fail.

Related-to: DWC-2490
Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/weather/Dockerfile
+++ b/weather/Dockerfile
@@ -12,45 +12,45 @@ FROM $CROSS_TC_DOCKER_REGISTRY/debian-cross-toolchain-$CROSS_TC_IMAGE_ARCH:$IMAG
 ARG CROSS_TC_IMAGE_ARCH
 ARG TOOLCHAIN_ARCH
 
-RUN echo "dpkg --add-architecture $CROSS_TC_IMAGE_ARCH"
-RUN dpkg --add-architecture "$CROSS_TC_IMAGE_ARCH"
-
 # install all required development packages
-RUN apt-get update
-RUN apt-get install -y git \
+
+RUN dpkg --add-architecture "$CROSS_TC_IMAGE_ARCH" \
+    && apt-get update && apt-get install -y \
+    git \
     cmake \
     libcurl4-openssl-dev:$CROSS_TC_IMAGE_ARCH \
-    libboost1.71-dev:$CROSS_TC_IMAGE_ARCH \
-    libboost-system1.71-dev:$CROSS_TC_IMAGE_ARCH \
-    libboost-test1.71-dev:$CROSS_TC_IMAGE_ARCH \
-    libboost-program-options1.71-dev:$CROSS_TC_IMAGE_ARCH \
+    libboost-system-dev:$CROSS_TC_IMAGE_ARCH \
     libjsoncpp-dev:$CROSS_TC_IMAGE_ARCH \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 # Build influxdb lib
-RUN git clone https://github.com/awegrzyn/influxdb-cxx.git
 COPY $TOOLCHAIN_ARCH-toolchain.cmake $TOOLCHAIN_ARCH-toolchain.cmake
-RUN mkdir influxdb-cxx/build
-RUN cd influxdb-cxx/build && cmake .. -DCMAKE_TOOLCHAIN_FILE=/$TOOLCHAIN_ARCH-toolchain.cmake \
-    -DCMAKE_INSTALL_PREFIX=/usr
-RUN cd influxdb-cxx/build && make install
+RUN git clone https://github.com/offa/influxdb-cxx.git \
+    && mkdir influxdb-cxx/build \
+    && cd influxdb-cxx/build \
+    && cmake .. -DCMAKE_TOOLCHAIN_FILE=/$TOOLCHAIN_ARCH-toolchain.cmake \
+        -DCMAKE_INSTALL_PREFIX=/usr -DINFLUXCXX_TESTING=OFF \
+        -DINFLUXCXX_SYSTEMTEST=OFF \
+    && make install
 
 # build weather app
 COPY src src
-RUN mkdir /src/build
-RUN cd src/build && cmake .. -DCMAKE_TOOLCHAIN_FILE=/$TOOLCHAIN_ARCH-toolchain.cmake
-RUN cd src/build && make install
+RUN mkdir /src/build \
+    && cd src/build \
+    && cmake .. -DCMAKE_TOOLCHAIN_FILE=/$TOOLCHAIN_ARCH-toolchain.cmake \
+    && make install
 
 # create 2nd container for target
 FROM --platform=$IMAGE_ARCH $DOCKER_REGISTRY/$BASE_NAME:$IMAGE_TAG
 
 # install runtime libraries
-RUN apt-get update
-RUN apt-get install -y libcurl4 libboost-system1.71.0 libjsoncpp1 \
+RUN apt-get update && apt-get install -y \
+    libcurl4 \
+    libjsoncpp24 \
     && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
 
 # take application executable from build container
-COPY --from=build /usr/lib/libInfluxDB.so /usr/lib
+COPY --from=build /usr/lib/libInfluxDB.so* /usr/lib/
 COPY --from=build /usr/bin/weather /usr/bin/
 
 ENTRYPOINT [ "/usr/bin/weather" ]
