dlr-gstreamer: add CI deploy steps
This sample is published to the torizonextras Docker Hub. Having the
deploy steps is useful to update it as needed.

This sample is only availble for 64-bit arch, multiarch deploy steps are
not added.

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -854,6 +854,14 @@ docker-deploy-adc-arm64v8-major:
     IMAGE_NAME: arm64v8-sample-adc
   stage: deploy-major
 
+docker-deploy-dlr-gstreamer-arm64v8-major:
+  extends: .docker-deploy-major
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+  variables:
+    IMAGE_NAME: arm64v8-sample-dlr-gstreamer-vivante
+  stage: deploy-major
+
 .docker-deploy-minor:
   when: manual
   script:
@@ -881,6 +889,15 @@ docker-deploy-adc-arm64v8-minor:
     - export MINOR="${DEBIAN_MINOR}"    
   variables:
     IMAGE_NAME: arm64v8-sample-adc
+  stage: deploy-minor
+
+docker-deploy-dlr-gstreamer-arm64v8-minor:
+  extends: .docker-deploy-minor
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_VIVANTE_MINOR}"
+  variables:
+    IMAGE_NAME: arm64v8-sample-dlr-gstreamer-vivante
   stage: deploy-minor
 
 .docker-deploy-patch:
@@ -916,6 +933,16 @@ docker-deploy-adc-arm64v8-patch:
     IMAGE_NAME: arm64v8-sample-adc
   stage: deploy-patch
 
+docker-deploy-dlr-gstreamer-arm64v8-patch:
+  extends: .docker-deploy-patch
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_VIVANTE_MINOR}"
+    - export PATCH="${WAYLAND_BASE_VIVANTE_PATCH}"
+  variables:
+    IMAGE_NAME: arm64v8-sample-dlr-gstreamer-vivante
+  stage: deploy-patch
+
 .docker-deploy-patch-date:
   when: manual
   script:
@@ -948,6 +975,16 @@ docker-deploy-adc-arm64v8-patch-date:
     - export PATCH="${DEBIAN_PATCH}"    
   variables:
     IMAGE_NAME: arm64v8-sample-adc
+  stage: deploy-patch-date
+
+docker-deploy-dlr-gstreamer-arm64v8-patch-date:
+  extends: .docker-deploy-patch-date
+  before_script:
+    - export MAJOR="${WAYLAND_BASE_VIVANTE_MAJOR}"
+    - export MINOR="${WAYLAND_BASE_VIVANTE_MINOR}"
+    - export PATCH="${WAYLAND_BASE_VIVANTE_PATCH}"
+  variables:
+    IMAGE_NAME: arm64v8-sample-dlr-gstreamer-vivante
   stage: deploy-patch-date
 
 .docker-deploy-multiarch-major:
