--- a/tflite/docker-compose.yaml
+++ b/tflite/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "2.4"
 services:
   tflite-example:
-      image: torizonextras/tflite:2
+      image: torizonextras/sample-tflite:2
     volumes:
        - /tmp:/tmp
        - /sys:/sys
