ci: add a final job that always run
All existing jobs only run if the respective demo directory has changes.
This makes a faster pipeline, but when no demo is changed then no
pipeline is run.

This is odd, for example, when editing the CI scripts or the README,
because a MR will keep "Checking pipeline status" forever.

Add a final job that always runs, even if no sample is changed, so the
MR process is sane.
It also provides a visual indication to the developer that the pipeline
has been triggered correctly.

Signed-off-by: Leonardo Graboski Veiga <leonardo.veiga@toradex.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ stages:
   - uart-sht31-kiosk
   - tflite
   - weather
+  - end
 
 adc-jobs:
   stage: adc
@@ -185,3 +186,10 @@ weather-jobs:
   rules:
     - changes:
       - weather/*
+
+# Run this job even if no other job is added to the pipeline
+# It prevents commits without a job
+final-job:
+  stage: end
+  script:
+    - echo "All jobs were run"
